--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section id="about" class="about">
         <div class="section-title">
-            <h2>About Me</h2>
+            <h2>About</h2>
         </div>
         <div class="about-content">
             <div class="about-text">
@@ -127,7 +127,7 @@
 
     <section id="contact" class="contact">
         <div class="section-title">
-            <h2>Contact Me</h2>
+            <h2>Contact</h2>
         </div>
         <div class="contact-container">
             <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
