--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <p><i class="fas fa-location-dot"></i> Dar es Salaam, Tanzania</p>
             </div>
             <div class="footer-section">
-                <h3>Connect With Me</h3>
+                <h3>Connect</h3>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/january-msemakweli/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://orcid.org/0009-0007-6743-8479" target="_blank"><i class="fab fa-orcid"></i></a>
