--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R/Shiny Apps - Msemakweli Research</title>
+    <title>R/Shiny Apps - January G. Msemakweli</title>
+    <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
