--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="983EVFyArk2AX9TUkYcR1HuD_x-q2RYztpzX7K-9vJo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R/Shiny Apps - January G. Msemakweli</title>
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
