--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="google-site-verification" content="983EVFyArk2AX9TUkYcR1HuD_x-q2RYztpzX7K-9vJo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>January G. Msemakweli - Data Analyst</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.ico">
     <link rel="stylesheet" href="styles.css">
