--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -16,8 +16,10 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=8SiYFvMAAAAJ&citpid=1" alt="January G. Msemakweli" class="logo-img">
-                <h1>Msemakweli Research</h1>
+                <a href="index.html">
+                    <img src="https://media.licdn.com/dms/image/v2/D4D03AQHHv45SnXdI8g/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1702616700424?e=1740009600&v=beta&t=TYlN87fMuMnahQkUnUT48EVjUEFJc5HxfXM8kiUlioU" alt="January G. Msemakweli" class="logo-img">
+                    <h1>Msemakweli Research</h1>
+                </a>
             </div>
             <div class="nav-links" id="navLinks">
                 <ul>
