--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <p>Data Analyst & Research Consultant</p>
             <p class="sub-text">CEO, Msemakweli Research Solutions | Based in Dar es Salaam, Tanzania</p>
             <a href="#contact" class="cta-button">Let's Connect</a>
+            <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
         </div>
     </section>
 
