--- a/colleagues.html
+++ b/colleagues.html
@@ -111,6 +111,153 @@
                         </div>
                     </div>
                 </div>
+                <!-- Amelia's Card -->
+                <div class="colleague-card">
+                    <div class="colleague-photo">
+                        <img src="images/Emmy.png" alt="Ms. Amelia Chebyala Alfred" class="colleague-image">
+                    </div>
+                    <div class="colleague-details">
+                        <h2>Ms. Amelia Chebyala Alfred</h2>
+                        <h3>Tutorial Assistant, Department of Environmental and Occupational Health</h3>
+                        <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
+                        <p class="preview-text">Amelia Chebyala Alfred is a Tutorial Assistant in the Department of Environmental and Occupational Health at MUHAS. She holds a BSc in Environmental Health Sciences and is currently pursuing an MSc in Environmental Science at Shivaji University, India...</p>
+                        <div class="colleague-social">
+                            <a href="https://scholar.google.com/citations?hl=en&user=F6Rv9V0AAAA" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
+                            <a href="https://www.researchgate.net/profile/Amelia-Alfred" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
+                            <a href="https://www.linkedin.com/in/amelia-alfred-a728a8236/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                        </div>
+                        <div class="share-buttons">
+                            <a href="https://wa.me/?text=Check%20out%20Ms.%20Amelia%20Chebyala%20Alfred,%20Environmental%20Health%20Scientist%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                <i class="fab fa-whatsapp"></i> WhatsApp
+                            </a>
+                            <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Ms.%20Amelia%20Chebyala%20Alfred,%20Environmental%20Health%20Scientist%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                <i class="fab fa-telegram"></i> Telegram
+                            </a>
+                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20Ms.%20Amelia%20Chebyala%20Alfred,%20Environmental%20Health%20Scientist%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                <i class="fab fa-twitter"></i> Twitter
+                            </a>
+                            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
+                                <i class="fab fa-linkedin"></i> Share
+                            </a>
+                        </div>
+                        <button class="read-more-btn">Read More</button>
+                    </div>
+                </div>
+
+                <!-- Amelia's Overlay -->
+                <div class="colleague-overlay">
+                    <div class="colleague-overlay-content">
+                        <button class="close-overlay"><i class="fas fa-times"></i></button>
+                        <div class="colleague-full-details">
+                            <div class="colleague-header">
+                                <img src="images/Emmy.png" alt="Ms. Amelia Chebyala Alfred" class="colleague-overlay-image">
+                                <div class="colleague-title">
+                                    <h2>Ms. Amelia Chebyala Alfred</h2>
+                                    <h3>Tutorial Assistant, Department of Environmental and Occupational Health</h3>
+                                    <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
+                                </div>
+                            </div>
+                            <div class="colleague-bio">
+                                <p>Amelia Chebyala Alfred is a Tutorial Assistant in the Department of Environmental and Occupational Health at Muhimbili University of Health and Allied Sciences (MUHAS), Tanzania. She holds a Bachelor of Science in Environmental Health Sciences from MUHAS and is currently pursuing a Master of Science in Environmental Science at Shivaji University, India.</p>
+                                <p>Her academic and professional work focuses on environmental health, occupational safety, and public health interventions. Amelia's research interests include water quality monitoring, air pollution, and climate change, with an emphasis on their impacts on community health. Her ongoing projects include evaluating drinking water treatment plants and distribution networks and studying the relationship between particulate matter and childhood pneumonia.</p>
+                                <p>Amelia has practical experience in environmental consultancies, public health education, and research. She has contributed to initiatives such as malaria control, waste management, and indoor as well as outdoor air monitoring.</p>
+                                <p>Her technical skills include data analysis (SPSS), geographic information systems (QGIS), and data visualization (ORIGIN). She is fluent in English and Swahili, with a strong commitment to advancing environmental and public health solutions.</p>
+                            </div>
+                            <div class="colleague-social">
+                                <a href="https://scholar.google.com/citations?hl=en&user=F6Rv9V0AAAA" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
+                                <a href="https://www.researchgate.net/profile/Amelia-Alfred" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
+                                <a href="https://www.linkedin.com/in/amelia-alfred-a728a8236/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                            </div>
+                            <div class="share-buttons">
+                                <a href="https://wa.me/?text=Check%20out%20Ms.%20Amelia%20Chebyala%20Alfred,%20Environmental%20Health%20Scientist%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                    <i class="fab fa-whatsapp"></i> WhatsApp
+                                </a>
+                                <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Ms.%20Amelia%20Chebyala%20Alfred,%20Environmental%20Health%20Scientist%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                    <i class="fab fa-telegram"></i> Telegram
+                                </a>
+                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20Ms.%20Amelia%20Chebyala%20Alfred,%20Environmental%20Health%20Scientist%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                    <i class="fab fa-twitter"></i> Twitter
+                                </a>
+                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
+                                    <i class="fab fa-linkedin"></i> Share
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Iddi's Card -->
+                <div class="colleague-card">
+                    <div class="colleague-photo">
+                        <img src="images/Iddi Mapande.jpg" alt="Mr. Iddi Mapande" class="colleague-image">
+                    </div>
+                    <div class="colleague-details">
+                        <h2>Mr. Iddi Mapande</h2>
+                        <h3>Tutorial Assistant, Department of Environmental and Occupational Health</h3>
+                        <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
+                        <p class="preview-text">Mr. Iddi Mapande is a dedicated academic and researcher with a strong foundation in environmental and occupational health. He serves as a Tutorial Assistant at MUHAS and is currently pursuing an MSc in Climate Change at the Asian Institute of Technology (AIT) in Thailand...</p>
+                        <div class="colleague-social">
+                            <a href="https://scholar.google.com/citations?user=MUfjZv8AAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
+                            <a href="https://www.researchgate.net/profile/Iddi-Mapande" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
+                            <a href="https://www.linkedin.com/in/iddi-mapande-70391b264/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                        </div>
+                        <div class="share-buttons">
+                            <a href="https://wa.me/?text=Check%20out%20Mr.%20Iddi%20Mapande,%20Climate%20Change%20Researcher%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                <i class="fab fa-whatsapp"></i> WhatsApp
+                            </a>
+                            <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Mr.%20Iddi%20Mapande,%20Climate%20Change%20Researcher%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                <i class="fab fa-telegram"></i> Telegram
+                            </a>
+                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20Mr.%20Iddi%20Mapande,%20Climate%20Change%20Researcher%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                <i class="fab fa-twitter"></i> Twitter
+                            </a>
+                            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
+                                <i class="fab fa-linkedin"></i> Share
+                            </a>
+                        </div>
+                        <button class="read-more-btn">Read More</button>
+                    </div>
+                </div>
+
+                <!-- Iddi's Overlay -->
+                <div class="colleague-overlay">
+                    <div class="colleague-overlay-content">
+                        <button class="close-overlay"><i class="fas fa-times"></i></button>
+                        <div class="colleague-full-details">
+                            <div class="colleague-header">
+                                <img src="images/Iddi Mapande.jpg" alt="Mr. Iddi Mapande" class="colleague-overlay-image">
+                                <div class="colleague-title">
+                                    <h2>Mr. Iddi Mapande</h2>
+                                    <h3>Tutorial Assistant, Department of Environmental and Occupational Health</h3>
+                                    <h4>Muhimbili University of Health and Allied Sciences (MUHAS)</h4>
+                                </div>
+                            </div>
+                            <div class="colleague-bio">
+                                <p>Mr. Iddi Mapande is a dedicated academic and researcher with a strong foundation in environmental and occupational health. He serves as a Tutorial Assistant in the Department of Environmental and Occupational Health at the Muhimbili University of Health and Allied Sciences (MUHAS) in Tanzania, where he contributes to the development of future environmental health professionals through teaching and mentorship.</p>
+                                <p>Mr. Mapande holds a Bachelor of Science in Environmental Health from MUHAS, reflecting his early commitment to addressing pressing health and environmental challenges. Currently, he is pursuing a Master of Science (MSc) in Climate Change at the Asian Institute of Technology (AIT) in Thailand. His graduate studies focus on understanding and mitigating the complex effects of climate change, particularly in relation to public health.</p>
+                                <p>His current research centers on investigating the impact of climate change on infectious diseases such as malaria and diarrhea. Through this work, Mr. Mapande aims to contribute valuable insights that inform effective policies and interventions to protect vulnerable populations from the growing health threats posed by a changing climate.</p>
+                            </div>
+                            <div class="colleague-social">
+                                <a href="https://scholar.google.com/citations?user=MUfjZv8AAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-google"></i> Google Scholar</a>
+                                <a href="https://www.researchgate.net/profile/Iddi-Mapande" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i> ResearchGate</a>
+                                <a href="https://www.linkedin.com/in/iddi-mapande-70391b264/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                            </div>
+                            <div class="share-buttons">
+                                <a href="https://wa.me/?text=Check%20out%20Mr.%20Iddi%20Mapande,%20Climate%20Change%20Researcher%20at%20MUHAS%20-%20https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button whatsapp">
+                                    <i class="fab fa-whatsapp"></i> WhatsApp
+                                </a>
+                                <a href="https://t.me/share/url?url=https://januarymsemakweli.com/colleagues&text=Check%20out%20Mr.%20Iddi%20Mapande,%20Climate%20Change%20Researcher%20at%20MUHAS" target="_blank" rel="noopener noreferrer" class="share-button telegram">
+                                    <i class="fab fa-telegram"></i> Telegram
+                                </a>
+                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20Mr.%20Iddi%20Mapande,%20Climate%20Change%20Researcher%20at%20MUHAS&url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button twitter">
+                                    <i class="fab fa-twitter"></i> Twitter
+                                </a>
+                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://januarymsemakweli.com/colleagues" target="_blank" rel="noopener noreferrer" class="share-button linkedin">
+                                    <i class="fab fa-linkedin"></i> Share
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
