--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <div class="nav-links" id="navLinks">
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about">About</a></li>
@@ -42,6 +43,34 @@
             <a href="#contact" class="cta-button">Let's Connect</a>
             <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
         </div>
+    </section>
+
+    <!-- Testimonials Card Section -->
+    <section class="testimonials-card">
+        <div class="testimonials-slider">
+            <div class="testimonial-slide">
+                <img src="images/Naomi A. Mbaya.PNG" alt="Naomi A. Mbaya" class="testimonial-photo">
+                <div class="testimonial-content">
+                    <p class="testimonial-text">"January's research consultation and data analysis expertise were instrumental in my pharmaceutical research. His guidance and analytical skills helped me achieve high-quality results in my studies."</p>
+                    <p class="testimonial-author">- Naomi A. Mbaya, BPharm, MUHAS</p>
+                </div>
+            </div>
+            <div class="testimonial-slide">
+                <img src="images/Prisca Hillonga.jpg" alt="Prisca Hillonga" class="testimonial-photo">
+                <div class="testimonial-content">
+                    <p class="testimonial-text">"What stands out about January is his exceptional work ethic and professionalism. The way he handles different clients and delivers consistent quality results is truly admirable. His dedication to excellence is evident in every project."</p>
+                    <p class="testimonial-author">- Prisca Hillonga, Research Enthusiast</p>
+                </div>
+            </div>
+            <div class="testimonial-slide">
+                <img src="images/Victor L. Nashon.jpg" alt="Victor L. Nashon" class="testimonial-photo">
+                <div class="testimonial-content">
+                    <p class="testimonial-text">"January's expertise and skills in data analysis and research methodology are truly top-notch. His professional approach and attention to detail make him an exceptional research consultant."</p>
+                    <p class="testimonial-author">- Victor L. Nashon, MBA, Mzumbe University</p>
+                </div>
+            </div>
+        </div>
+        <div class="slider-dots"></div>
     </section>
 
     <section id="services" class="services">
