--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -23,10 +23,11 @@
             </div>
             <div class="nav-links" id="navLinks">
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="blog.html" class="active">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
