--- a/colleagues.html
+++ b/colleagues.html
@@ -24,6 +24,7 @@
             </div>
             <div class="nav-links" id="navLinks">
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
                     <li><a href="index.html#about">About</a></li>
