--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="msapplication-TileColor" content="#2e86de">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            background-color: #2e86de;
+        }
+    </style>
     <title>Blog Posts - January G. Msemakweli</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" type="image/x-icon" href="https://january-msemakweli.github.io/msemakweli/favicon.png">
