--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="983EVFyArk2AX9TUkYcR1HuD_x-q2RYztpzX7K-9vJo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#4287f5">
+    <meta name="theme-color" content="#f5ce42">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="msapplication-TileColor" content="#4287f5">
+    <meta name="msapplication-TileColor" content="#f5ce42">
     <style>
         html, body {
             margin: 0;
             padding: 0;
-            background-color: #dedcd9;
+            background-color: #f5ce42;
         }
     </style>
     <title>January G. Msemakweli - Data Analyst</title>
