--- a/blog.html
+++ b/blog.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#dedcd9">
+    <meta name="theme-color" content="#5d6d75">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="msapplication-TileColor" content="#dedcd9">
+    <meta name="msapplication-TileColor" content="#5d6d75">
     <style>
         html, body {
             margin: 0;
             padding: 0;
-            background-color: #dedcd9;
+            background-color: #5d6d75;
         }
     </style>
     <title>Blog Posts - January G. Msemakweli</title>
