--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="983EVFyArk2AX9TUkYcR1HuD_x-q2RYztpzX7K-9vJo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#5d6d75">
+    <meta name="theme-color" content="#2e86df">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="msapplication-TileColor" content="#5d6d75">
+    <meta name="msapplication-TileColor" content="#2e86df">
     <style>
         html, body {
             margin: 0;
