--- a/ai-assistant.html
+++ b/ai-assistant.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="ai.css">
 </head>
 <body>
     <header>
@@ -55,17 +56,28 @@
         </div>
     </section>
 
-    <section class="chat-section">
-        <div class="chat-iframe-container">
-            <iframe 
-                src="https://huggingface.co/spaces/januarymsemakweli/GloriaAI" 
-                frameborder="0"
-                width="100%"
-                height="700px"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope"
-            ></iframe>
+    <!-- Remove the chat-section container and directly use chat-window -->
+    <div class="chat-window">
+        <div class="chat-header">
+            <div class="chat-title">
+                <i class="fas fa-robot"></i>
+                <h2>Gloria AI</h2>
+            </div>
         </div>
-    </section>
+        <div class="chat-messages" id="chatMessages">
+            <!-- Messages will be added here dynamically -->
+        </div>
+        <div class="chat-input">
+            <textarea 
+                id="userInput" 
+                placeholder="Type your message here..."
+                rows="1"
+            ></textarea>
+            <button id="sendButton">
+                <i class="fas fa-paper-plane"></i>
+            </button>
+        </div>
+    </div>
 
     <footer>
         <div class="footer-content">
@@ -95,5 +107,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="ai.js"></script>
 </body>
 </html> 
