--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+<script>
+    window.embeddedChatbotConfig = {
+        chatbotId: "thxwRJLgO27yuFOFSKDaH",
+        domain: "www.chatbase.co"
+    }
+</script>
+<script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="thxwRJLgO27yuFOFSKDaH"
+    domain="www.chatbase.co"
+    defer>
+</script>
 <body>
     <header>
         <nav>
