--- a/ai-assistant.html
+++ b/ai-assistant.html
@@ -26,7 +26,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="ai.css">
 </head>
-<body>
+</body>
+    <h1>Welcome to GloriaAI</h1>
+    <iframe 
+        src="https://huggingface.co/spaces/januarymsemakweli/GloriaAI" 
+        width="100%" 
+        height="800" 
+        style="border:none;">
+    </iframe>
     <header>
         <nav>
             <div class="logo">
