--- a/colleagues.html
+++ b/colleagues.html
@@ -37,7 +37,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#services">Services</a></li>
-                    <li><a href="index.html#portfolio">Portfolio</a></li>
+                    <li><a href="ai-assistant.html">Gloria AI</a></li>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
