--- a/shiny-apps.html
+++ b/shiny-apps.html
@@ -52,6 +52,21 @@
         <div class="apps-grid">
             <div class="app-card">
                 <div class="app-icon">
+                    <i class="fas fa-dna"></i>
+                </div>
+                <h3>Two-Sample MR</h3>
+                <p>A R/Shiny Web App for Two Sample Mendelian Randomization. Perfect for analyzing Genetic causal inference using GWAS Summary Statics.</p>
+                <ul class="app-features">
+                    <li><i class="fas fa-check"></i> Upload Exposure Data</li>
+                    <li><i class="fas fa-check"></i> Upload Outcome Data</li>
+                    <li><i class="fas fa-check"></i> Map columns manually</li>
+                    <li><i class="fas fa-check"></i> Run Analysis</li>
+                </ul>
+                <a href="https://www.januarymsemakweli.com/mendelian-randomization.html" class="app-button">Launch App</a>
+            </div>
+
+            <div class="app-card">
+                <div class="app-icon">
                     <i class="fas fa-calculator"></i>
                 </div>
                 <h3>RegressThat v2</h3>
