--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="ai-assistant.html">Gloria AI</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="shiny-apps.html">R/Shiny Apps</a></li>
                 </ul>
             </div>
         </nav>
@@ -51,7 +51,7 @@
             <h1>January G. Msemakweli</h1>
             <p>Data Analyst & Research Consultant</p>
             <p class="sub-text">CEO, Msemakweli Research Solutions | Based in Dar es Salaam, Tanzania</p>
-            <a href="#contact" class="cta-button">Let's Connect</a>
+            <a href="#contact" class="cta-button">Contact</a>
             <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
         </div>
     </section>
