--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>January G. Msemakweli</h1>
-            <p>Data Analyst & Research Consultant</p>
-            <p class="sub-text">CEO, Msemakweli Research Solutions | Based in Dar es Salaam, Tanzania</p>
+            <p>Research Enthusiast with Practical Experience in Data Analysis</p>
+            <p class="sub-text">Based in Dar es Salaam, Tanzania</p>
             <a href="#contact" class="cta-button">Contact</a>
             <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
         </div>
