--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>January G. Msemakweli</h1>
-            <p>Research Enthusiast with Practical Experience in Data Analysis</p>
+            <p>Toung Researcher Experienced in Data Analysis</p>
             <p class="sub-text">Based in Dar es Salaam, Tanzania</p>
             <a href="#contact" class="cta-button">Contact</a>
             <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
